--- a/buttons.html
+++ b/buttons.html
@@ -24,11 +24,10 @@
     </style>
 </head>
 <body>
-    <h1>Please Select Which Game You Have Finished</h1>
+    <h1>Welcome to My Site</h1>
     <div class="button-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoQ8yT4QxrHvWm0IoTBi5UJpC7gMO1jHz9ccku-Xw4F8A6bg/viewform?embedded=true" width="640" height="2071" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        <button onclick="window.location.href='https://forms.gle/TRYkhoDXFhbcUPacA'">Exploding Kittens</button>
-        <button onclick="window.location.href='https://forms.gle/TRYkhoDXFhbcUPacA'">Durak</button>
+        <button onclick="window.location.href='https://example1.com'">Button 1</button>
+        <button onclick="window.location.href='https://example2.com'">Button 2</button>
         <button onclick="window.location.href='https://example3.com'">Button 3</button>
         <button onclick="window.location.href='https://example4.com'">Button 4</button>
         <button onclick="window.location.href='https://example5.com'">Button 5</button>
