--- a/buttons.html
+++ b/buttons.html
@@ -24,15 +24,15 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Site</h1>
+    <h1>Please Click on the game that you played</h1>
     <div class="button-container">
-        <button onclick="window.location.href='https://example1.com'">Button 1</button>
-        <button onclick="window.location.href='https://example2.com'">Button 2</button>
-        <button onclick="window.location.href='https://example3.com'">Button 3</button>
-        <button onclick="window.location.href='https://example4.com'">Button 4</button>
-        <button onclick="window.location.href='https://example5.com'">Button 5</button>
-        <button onclick="window.location.href='https://example6.com'">Button 6</button>
-        <button onclick="window.location.href='https://example7.com'">Button 7</button>
+        <button onclick="window.location.href='https://forms.gle/X1sikxD3hdJ5LxvG7'">Exploding Kittens</button>
+        <button onclick="window.location.href='https://forms.gle/zSaGUCNTtVaS6Tn58'">Catan</button>
+        <button onclick="window.location.href='https://forms.gle/EWWE3AgoZtnyKL2K6'">Durak</button>
+        <button onclick="window.location.href='https://forms.gle/ScBFDqGupqLV3RDr9'">Liar</button>
+        <button onclick="window.location.href='https://forms.gle/vuFRgdiyDihZx2rg7'">Toots</button>
+        <button onclick="window.location.href='https://forms.gle/N6umTfKdyK785Z678'">Chess</button>
+        <button onclick="window.location.href='https://forms.gle/nuedvCZb5s1oXuo28'">Other</button>
     </div>
 </body>
 </html>
